--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,15 +4,17 @@
     display: block;
 
     &-about {
-        position: relative;
-        display: flex;        
-        border: 1px solid white;
-        border-radius: 5px;        
-        width: 50px;        
-        height: 50px;        
-        top: 100px;        
-        left: 50%;        
-        transform: translate(-50%);   
+        position: absolute;
+        bottom: 10vh;
+        animation: arrow-down-show 2s ease-out;
+        // display: flex;        
+        // border: 1px solid white;
+        // border-radius: 5px;        
+        // width: 50px;        
+        // height: 50px;        
+        // top: 100px;        
+        // left: 50%;        
+        // transform: translate(-50%);   
 
         .arrow-animated {
             position: absolute;
@@ -27,10 +29,11 @@
             height: 100%;
             padding: 10px 0;
             justify-content: center;
+            animation: arrow-down 1s 2s ease-in-out infinite;
     
             &:hover {
                 color: $primary-color;
-                animation: arrow-down 1s infinite;
+                // animation: arrow-down 1s infinite;
             }
     
         }    
