--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -43,7 +43,7 @@
     }
 }
 
-.start {
+.welcome-text {
     position: absolute;
     // top: 50%;
     // left: 50%;
@@ -106,7 +106,7 @@
         }
       }
 
-      &-logo {
+      .logo {
         border: 1px solid white;
         border-radius: 100px;
         width: 100px;
