--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,23 +30,27 @@
         }
     }
 
-    &-portfolio {
+    &-certyfikaty {
         height: 100vh;
         width: 100%;
         align-items: center;
         margin-top: 50px;
 
+        &-flex {
+            display: inline-flex;
+        }
+
         &--box {
+           
+            img {
+                width: 400px;
+                height: 300px;
+                cursor: pointer;
+                transition: all 1.5s;
 
-
-            a {
-               
-
-                img {
-                    width: 300px;
-                    height: 180px;
-                    border: 2px solid $primary-color;
-                    padding: 10px;
+                &:hover {
+                    width: 600px;
+                    height: 500px;
                 }
             }
         }
