--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,6 +6,10 @@
         align-items: center;
         height: 100vh;
         width: 100%;
+
+        // .mouse-icon {
+        //     background-image: url("/icon/basic_magic_mouse.png");
+        // }
     }
 
     &-about {
@@ -41,17 +45,39 @@
         }
 
         &--box {
-           
+           background: $primary-color;
+           position: relative;
+           transition: .3s ease-in-out;
+           margin: 20px;
+
+
             img {
                 width: 400px;
-                height: 300px;
+                height: 100%;
                 cursor: pointer;
-                transition: all 1.5s;
+                opacity: 1;
+                -webkit-transition: .3s ease-in-out;
+                transition: .3s ease-in-out;
 
                 &:hover {
-                    width: 600px;
-                    height: 500px;
+                    background-color: $primary-color;
+                    opacity: .1;
                 }
+            }
+
+            i {
+                font-size: 40px;
+                position: absolute;
+                color: white;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                z-index: -1;
+                opacity: 1;
+            }
+
+            &:hover {
+                z-index: 0;
             }
         }
         
