--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -75,11 +75,11 @@
         top: 60px;        
         left: 3px;
 
-        -webkit-animation: neon2 1.5s ease-in-out infinite alternate;
-        -moz-animation: neon2 1.5s ease-in-out infinite alternate;
-        animation: neon2 1.5s ease-in-out infinite alternate;
+        -webkit-animation: neon1 5s infinite;
+        -moz-animation: neon1 5s infinite;
+        animation: neon1 5s infinite;
 
-        transition: all .5s;
+        // transition: all .5s;
       }
 
       .neon2 {
@@ -92,14 +92,15 @@
         top: 60px;        
         left: 25px;
 
-        -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
-        -moz-animation: neon1 1.5s ease-in-out infinite alternate;
-        animation: neon1 1.5s ease-in-out infinite alternate;
+        -webkit-animation: neon2 2s ease-in-out infinite alternate;
+        -moz-animation: neon2 2s ease-in-out infinite alternate;
+        animation: neon2 2s ease-in-out infinite alternate;
 
         transition: all .5s;
 
         &:hover {
-            color: #ea9554;
+            color: #6d5669;
+            text-shadow: 0 0 3px #635861, 0 0 5px #635861;
             -webkit-animation: none;
             -moz-animation: none;
             animation: none;
