--- a/sass/main.css
+++ b/sass/main.css
@@ -320,6 +320,18 @@
   }
 }
 
+@-webkit-keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -591,6 +603,56 @@ body {
   text-align: center;
 }
 
+.column {
+  margin: 15px 15px 0;
+  padding: 0;
+}
+
+.column:last-child {
+  padding-bottom: 60px;
+}
+
+.column::after {
+  content: '';
+  clear: both;
+  display: block;
+}
+
+.column div {
+  position: relative;
+  float: left;
+  width: 300px;
+  height: 200px;
+  margin: 0 0 0 25px;
+  padding: 0;
+}
+
+.column div:first-child {
+  margin-left: 0;
+}
+
+.column div span {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  z-index: -1;
+  display: block;
+  width: 300px;
+  margin: 0;
+  padding: 0;
+  color: #444;
+  font-size: 18px;
+  text-decoration: none;
+  text-align: center;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  opacity: 0;
+}
+
+.i-color {
+  color: #ea9554;
+}
+
 .section-start {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -639,42 +701,99 @@ body {
   display: inline-flex;
 }
 
-.section-certyfikaty--box {
-  background: #ea9554;
-  position: relative;
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
+.section-certyfikaty-flex--box {
   margin: 20px;
+  /* Shine */
 }
 
-.section-certyfikaty--box img {
-  width: 400px;
+.section-certyfikaty-flex--box .shine-figure {
+  position: relative;
+  width: 300px;
+  height: 200px;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+  overflow: hidden;
+}
+
+.section-certyfikaty-flex--box .shine-figure::before {
+  position: absolute;
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
+  content: '';
+  width: 50%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.3)));
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
+}
+
+.section-certyfikaty-flex--box .shine-figure:hover::before {
+  -webkit-animation: shine .75s;
+  animation: shine .75s;
+}
+
+.section-certyfikaty-flex--box .shine-figure:hover + .image-text {
+  bottom: -36px;
+  opacity: 1;
+}
+
+.section-certyfikaty-flex--box .shine-figure .image {
+  width: 100%;
   height: 100%;
   cursor: pointer;
+}
+
+.section-certyfikaty .overlay {
+  position: fixed;
+  top: -100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  -webkit-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  overflow: hidden;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.section-certyfikaty .overlay:target {
+  visibility: visible;
   opacity: 1;
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
 }
 
-.section-certyfikaty--box img:hover {
-  background-color: #ea9554;
-  opacity: .1;
+.section-certyfikaty .popup {
+  text-align: center;
+  position: relative;
+  -webkit-transition: all 5s ease-in-out;
+  transition: all 5s ease-in-out;
+  height: 100%;
 }
 
-.section-certyfikaty--box i {
-  font-size: 40px;
+.section-certyfikaty .popup .close {
   position: absolute;
+  top: 22rem;
+  right: 32rem;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+  font-size: 50px;
+  font-weight: bold;
+  text-decoration: none;
   color: white;
-  left: 50%;
+}
+
+.section-certyfikaty .popup .close:hover {
+  color: #ea9554;
+}
+
+.section-certyfikaty .popup img {
+  position: absolute;
+  width: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  z-index: -1;
-  opacity: 1;
-}
-
-.section-certyfikaty--box:hover {
-  z-index: 0;
 }
 
 .section-cv {
