--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,48 @@
+.column {
+	margin: 15px 15px 0;
+	padding: 0;
+}
+.column:last-child {
+	padding-bottom: 60px;
+}
+.column::after {
+	content: '';
+	clear: both;
+	display: block;
+}
+.column div {
+	position: relative;
+	float: left;
+	width: 300px;
+	height: 200px;
+	margin: 0 0 0 25px;
+	padding: 0;
+}
+.column div:first-child {
+	margin-left: 0;
+}
+.column div span {
+	position: absolute;
+	bottom: -20px;
+	left: 0;
+	z-index: -1;
+	display: block;
+	width: 300px;
+	margin: 0;
+	padding: 0;
+	color: #444;
+	font-size: 18px;
+	text-decoration: none;
+	text-align: center;
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+	opacity: 0;
+}
+
+.i-color {
+    color: $primary-color;
+}
+
 .section {
 
     &-start {
@@ -42,44 +87,110 @@
 
         &-flex {
             display: inline-flex;
+
+            &--box {
+                margin: 20px;                 
+     
+                 /* Shine */
+                .shine {
+
+                    &-figure {
+                        position: relative;
+                        width: 300px;
+                        height: 200px;
+                        margin: 0;
+                        padding: 0;
+                        background: #fff;
+                        overflow: hidden;
+                        
+
+                        &::before {
+                            position: absolute;
+                            top: 0;
+                            left: -75%;
+                            z-index: 2;
+                            display: block;
+                            content: '';
+                            width: 50%;
+                            height: 100%;
+                            background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+                            background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+                            -webkit-transform: skewX(-25deg);
+                            transform: skewX(-25deg);
+                        }
+
+                        &:hover{
+                        
+                            &::before {
+                            -webkit-animation: shine .75s;
+                            animation: shine .75s;
+                            }
+
+                            
+                        }
+                        
+                        &:hover+.image-text {
+                            bottom: -36px;
+                            opacity: 1;
+                        }
+
+                        .image {
+                            width: 100%;
+                            height: 100%;
+                            cursor: pointer;
+                       }    
+                    }
+                }               
+            }            
         }
 
-        &--box {
-           background: $primary-color;
-           position: relative;
-           transition: .3s ease-in-out;
-           margin: 20px;
+        .overlay {
+            position: fixed;
+            top: -100%;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            -webkit-transition: opacity .5s ease-in-out;
+            -moz-transition: opacity .5s ease-in-out;
+            -o-transition: opacity .5s ease-in-out;
+            transition: opacity .5s ease-in-out;
+            overflow: hidden;
+            visibility: hidden;
+            opacity: 0;
+          }
+          .overlay:target {
+            visibility: visible;
+            opacity: 1;
+          }
+          
+          .popup {
+              text-align: center;
+              // widows: 50%;
+              position: relative;
+              transition: all 5s ease-in-out;
+              height: 100%;
+          }
 
+          .popup .close {
+            position: absolute;
+            top: 22rem;
+            right: 32rem;
+            transition: all 200ms;
+            font-size: 50px;
+            font-weight: bold;
+            text-decoration: none;
+            color: white;
+          }
+          .popup .close:hover {
+            color: $primary-color;
+          }
 
-            img {
-                width: 400px;
-                height: 100%;
-                cursor: pointer;
-                opacity: 1;
-                -webkit-transition: .3s ease-in-out;
-                transition: .3s ease-in-out;
+          .popup img {
 
-                &:hover {
-                    background-color: $primary-color;
-                    opacity: .1;
-                }
-            }
-
-            i {
-                font-size: 40px;
-                position: absolute;
-                color: white;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-                z-index: -1;
-                opacity: 1;
-            }
-
-            &:hover {
-                z-index: 0;
-            }
-        }
+              position: absolute;
+              width: 50%;
+              top: 50%;
+              transform: translate(-50%, -50%);
+          }
         
     }
 
