--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -92,106 +92,168 @@
                 margin: 20px;                 
      
                  /* Shine */
-                .shine {
+                // .shine {
 
-                    &-figure {
-                        position: relative;
-                        width: 300px;
-                        height: 200px;
-                        margin: 0;
-                        padding: 0;
-                        background: #fff;
-                        overflow: hidden;
+                //     &-figure {
+                //         position: relative;
+                //         width: 300px;
+                //         height: 200px;
+                //         margin: 0;
+                //         padding: 0;
+                //         background: #fff;
+                //         overflow: hidden;
                         
 
-                        &::before {
-                            position: absolute;
-                            top: 0;
-                            left: -75%;
-                            z-index: 2;
-                            display: block;
-                            content: '';
-                            width: 50%;
-                            height: 100%;
-                            background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-                            background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-                            -webkit-transform: skewX(-25deg);
-                            transform: skewX(-25deg);
-                        }
+                //         &::before {
+                //             position: absolute;
+                //             top: 0;
+                //             left: -75%;
+                //             z-index: 2;
+                //             display: block;
+                //             content: '';
+                //             width: 50%;
+                //             height: 100%;
+                //             background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+                //             background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+                //             -webkit-transform: skewX(-25deg);
+                //             transform: skewX(-25deg);
+                //         }
 
-                        &:hover{
+                //         &:hover{
                         
-                            &::before {
-                            -webkit-animation: shine .75s;
-                            animation: shine .75s;
-                            }
+                //             &::before {
+                //             -webkit-animation: shine .75s;
+                //             animation: shine .75s;
+                //             }
 
                             
+                //         }
+                        
+                //         &:hover+.image-text {
+                //             bottom: -36px;
+                //             opacity: 1;
+                //         }
+
+                //         .image {
+                //             width: 100%;
+                //             height: 100%;
+                //             cursor: pointer;
+                //        }    
+                //     }
+                // }  
+                
+                a.lightbox img {
+                    height: 200px;
+                    width: 300px;
+                    border: 3px solid white;
+                    box-shadow: 0px 0px 8px white;
+                    margin: 94px 20px 20px 20px;
+                }
+            }  
+            
+            .lightbox-target {
+                position: fixed;
+                top: -100%;
+                width: 100%;
+                background: rgba(0,0,0,.7);
+                // width: 100%;
+                opacity: 0;
+                -webkit-transition: opacity .5s ease-in-out;
+                -moz-transition: opacity .5s ease-in-out;
+                -o-transition: opacity .5s ease-in-out;
+                transition: opacity .5s ease-in-out;
+                overflow: hidden;
+                z-index: 1;
+                }
+
+                .lightbox-target img {
+                    margin: auto;
+                    position: absolute;
+                    top: 0;
+                    left:0;
+                    right:0;
+                    bottom: 0;
+                    max-height: 0%;
+                    max-width: 0%;
+                    border: 3px solid white;
+                    box-shadow: 0px 0px 8px white;
+                    box-sizing: border-box;
+                    -webkit-transition: .5s ease-in-out;
+                    -moz-transition: .5s ease-in-out;
+                    -o-transition: .5s ease-in-out;
+                    transition: .5s ease-in-out;
+                    }
+
+                    a.lightbox-close {
+                        display: block;
+                        width:50px;
+                        height:50px;
+                        box-sizing: border-box;
+                        background: white;
+                        color: black;
+                        text-decoration: none;
+                        position: absolute;
+                        top: -100px;
+                        right: 0;
+                        -webkit-transition: .5s ease-in-out;
+                        -moz-transition: .5s ease-in-out;
+                        -o-transition: .5s ease-in-out;
+                        transition: .5s ease-in-out;
                         }
                         
-                        &:hover+.image-text {
-                            bottom: -36px;
-                            opacity: 1;
+                        /* Provides part of the "X" to eliminate an image from the close link */
+                        
+                        a.lightbox-close:before {
+                        content: "";
+                        display: block;
+                        height: 30px;
+                        width: 1px;
+                        background: black;
+                        position: absolute;
+                        left: 26px;
+                        top:10px;
+                        -webkit-transform:rotate(45deg);
+                        -moz-transform:rotate(45deg);
+                        -o-transform:rotate(45deg);
+                        transform:rotate(45deg);
                         }
-
-                        .image {
-                            width: 100%;
-                            height: 100%;
-                            cursor: pointer;
-                       }    
-                    }
-                }               
-            }            
+                        
+                        /* Provides part of the "X" to eliminate an image from the close link */
+                        
+                        a.lightbox-close:after {
+                        content: "";
+                        display: block;
+                        height: 30px;
+                        width: 1px;
+                        background: black;
+                        position: absolute;
+                        left: 26px;
+                        top:10px;
+                        -webkit-transform:rotate(-45deg);
+                        -moz-transform:rotate(-45deg);
+                        -o-transform:rotate(-45deg);
+                        transform:rotate(-45deg);
+                        }
+                        
+                        /* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
+                        
+                        .lightbox-target:target {
+                        opacity: 1;
+                        top: 0;
+                        bottom: 0;
+                        left: 0;
+                        }
+                        
+                        .lightbox-target:target img {
+                        max-height: 50%;
+                        max-width: 100%;
+                        }
+                        
+                        .lightbox-target:target a.lightbox-close {
+                        top: 0px;
+                        transition: all .5s ease-in-out;
+                        }
         }
-
-        .overlay {
-            position: fixed;
-            top: -100%;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            -webkit-transition: opacity .5s ease-in-out;
-            -moz-transition: opacity .5s ease-in-out;
-            -o-transition: opacity .5s ease-in-out;
-            transition: opacity .5s ease-in-out;
-            overflow: hidden;
-            visibility: hidden;
-            opacity: 0;
-          }
-          .overlay:target {
-            visibility: visible;
-            opacity: 1;
-          }
-          
-          .popup {
-              text-align: center;
-              // widows: 50%;
-              position: relative;
-              transition: all 5s ease-in-out;
-              height: 100%;
-          }
-
-          .popup .close {
-            position: absolute;
-            top: 22rem;
-            right: 32rem;
-            transition: all 200ms;
-            font-size: 50px;
-            font-weight: bold;
-            text-decoration: none;
-            color: white;
-          }
-          .popup .close:hover {
-            color: $primary-color;
-          }
-
-          .popup img {
-
-              position: absolute;
-              width: 50%;
-              top: 50%;
-              transform: translate(-50%, -50%);
-          }
-        
     }
 
     &-cv {
