--- a/sass/main.css
+++ b/sass/main.css
@@ -699,14 +699,10 @@ body {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  /* Provides part of the "X" to eliminate an image from the close link */
-  /* Provides part of the "X" to eliminate an image from the close link */
-  /* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
 }
 
 .section-certyfikaty-flex--box {
   margin: 20px;
-  /* Shine */
 }
 
 .section-certyfikaty-flex--box a.lightbox img {
@@ -748,7 +744,7 @@ body {
   transition: .5s ease-in-out;
 }
 
-.section-certyfikaty-flex a.lightbox-close {
+.section-certyfikaty-flex .lightbox-target a.lightbox-close {
   display: block;
   width: 50px;
   height: 50px;
@@ -764,7 +760,7 @@ body {
   transition: .5s ease-in-out;
 }
 
-.section-certyfikaty-flex a.lightbox-close:before {
+.section-certyfikaty-flex .lightbox-target a.lightbox-close::before {
   content: "";
   display: block;
   height: 30px;
@@ -777,7 +773,7 @@ body {
   transform: rotate(45deg);
 }
 
-.section-certyfikaty-flex a.lightbox-close:after {
+.section-certyfikaty-flex .lightbox-target a.lightbox-close::after {
   content: "";
   display: block;
   height: 30px;
