Zakończenie prac nad certyfikatami

--- a/sass/main.css
+++ b/sass/main.css
@@ -618,7 +618,7 @@ body {
   display: block;
 }
 
-.column div {
+.column a.lightbox {
   position: relative;
   float: left;
   width: 300px;
@@ -627,26 +627,8 @@ body {
   padding: 0;
 }
 
-.column div:first-child {
+.column a.lightbox:first-child {
   margin-left: 0;
-}
-
-.column div span {
-  position: absolute;
-  bottom: -20px;
-  left: 0;
-  z-index: -1;
-  display: block;
-  width: 300px;
-  margin: 0;
-  padding: 0;
-  color: #444;
-  font-size: 18px;
-  text-decoration: none;
-  text-align: center;
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-  opacity: 0;
 }
 
 .i-color {
@@ -705,13 +687,61 @@ body {
   margin: 20px;
 }
 
+.section-certyfikaty-flex--box .lightbox {
+  position: relative;
+  overflow: hidden;
+}
+
+.section-certyfikaty-flex--box .lightbox::before {
+  position: absolute;
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
+  content: '';
+  width: 50%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.3)));
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
+}
+
+.section-certyfikaty-flex--box .lightbox:hover::before {
+  -webkit-animation: shine .75s;
+  animation: shine .75s;
+}
+
 .section-certyfikaty-flex--box a.lightbox img {
   height: 200px;
   width: 300px;
   border: 3px solid white;
   -webkit-box-shadow: 0px 0px 8px white;
           box-shadow: 0px 0px 8px white;
-  margin: 94px 20px 20px 20px;
+}
+
+.section-certyfikaty-flex--box:hover .loop-icon {
+  opacity: 1;
+  bottom: -8px;
+  position: relative;
+}
+
+.section-certyfikaty-flex .loop-icon {
+  position: relative;
+  bottom: 25px;
+  left: 0;
+  z-index: -1;
+  display: block;
+  width: 300px;
+  margin: 0;
+  padding: 0;
+  color: #ea9554;
+  font-size: 18px;
+  text-decoration: none;
+  text-align: center;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  opacity: 0;
 }
 
 .section-certyfikaty-flex .lightbox-target {
