--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,7 +10,7 @@
 	clear: both;
 	display: block;
 }
-.column div {
+.column a.lightbox {
 	position: relative;
 	float: left;
 	width: 300px;
@@ -18,25 +18,8 @@
 	margin: 0 0 0 25px;
 	padding: 0;
 }
-.column div:first-child {
+.column a.lightbox:first-child {
 	margin-left: 0;
-}
-.column div span {
-	position: absolute;
-	bottom: -20px;
-	left: 0;
-	z-index: -1;
-	display: block;
-	width: 300px;
-	margin: 0;
-	padding: 0;
-	color: #444;
-	font-size: 18px;
-	text-decoration: none;
-	text-align: center;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-	opacity: 0;
 }
 
 .i-color {
@@ -92,8 +75,28 @@
                 margin: 20px;   
                 
                 .lightbox {
+                    position: relative;
+                    overflow: hidden;
 
-                    
+                    &::before {
+                        position: absolute;
+                        top: 0;
+                        left: -75%;
+                        z-index: 2;
+                        display: block;
+                        content: '';
+                        width: 50%;
+                        height: 100%;
+                        background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+                        background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+                        -webkit-transform: skewX(-25deg);
+                        transform: skewX(-25deg);
+                    }
+
+                    &:hover::before {
+                        -webkit-animation: shine .75s;
+                        animation: shine .75s;
+                    }                    
                 }
                 
                 a.lightbox img {
@@ -101,8 +104,31 @@
                     width: 300px;
                     border: 3px solid white;
                     box-shadow: 0px 0px 8px white;
-                    margin: 94px 20px 20px 20px;
-                }                
+                }  
+                
+                &:hover .loop-icon {
+                    opacity: 1;
+                    bottom: -8px;
+                    position: relative;
+                }
+            }
+
+            .loop-icon {
+                position: relative;
+                bottom: 25px;
+                left: 0;
+                z-index: -1;
+                display: block;
+                width: 300px;
+                margin: 0;
+                padding: 0;
+                color: $primary-color;
+                font-size: 18px;
+                text-decoration: none;
+                text-align: center;
+                -webkit-transition: .3s ease-in-out;
+                transition: .3s ease-in-out;
+                opacity: 0;
             }
             
             .lightbox-target {
