--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -247,15 +247,12 @@
         .hexagon {
             position: relative;
             display: inline-block;
-            /* left/right margin approx. 25% of .hexagon width + spacing */
             margin: 1px 18px;
-            background-color: hsla(60, 75%, 75%, 1.0);
+            background-color: lightgray;
             text-align: center;
+            color: gray;
           }
           .hexagon, .hexagon::before, .hexagon::after {
-            /* easy way: height is width * 1.732
-            actual formula is 2*(width/(2*Math.tan(Math.PI/6)))
-            remove border-radius for sharp corners on hexagons */
             width: 67px;
             height: 116px;
             border-radius: 20%/5%;
@@ -275,19 +272,18 @@
             transform: rotate(60deg);
           }
           .hexagon:nth-child(even) {
-            /* top approx. 50% of .hexagon height + spacing */
             top: 59px;
           }
           .hexagon:hover {
-            background-color: $primary-color;
+            background-color: gray;
             cursor: pointer;
             z-index: 105;
           }
 
           .hexagon:hover .hexagontent {
-              color: red;
+              color: white;
           }
-          
+
           .hexagon:active {
             background-color: $primary-color;
             z-index: 110;
@@ -301,6 +297,10 @@
             font-size: 1.4rem;
             line-height: 1.2;
             z-index: 100;
+
+            i {
+                font-size: 30px;
+            }
           }
           .ibws-fix {
             /* inline-block whitespace fix */
