Dodanie bg-color do nagłówków kategorii głównych

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -8,9 +8,11 @@
 .u-margin-top-medium{ margin-top: 4rem; }
 .u-margin-top-big{ margin-top: 8rem; }
 
-.u-padding-top-big { padding-top: 8rem; }
+.padding-top-big { padding-top: 4.5rem; }
 
 .u-left { text-align: left; }
 .u-right { text-align: right; }
 
 .u-list-style-none { list-style: none; }
+
+.bg-color { background-color: rgba(255, 255, 255, 0.8); }
