--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -238,6 +238,31 @@
 
     &-contact {
         height: 100vh;
+        text-align: center;
+        
+        .contact-text {
+
+            span {
+                font-size: 40px;
+                color: #fff;
+                font-weight: 600;
+                text-shadow: 0px 0px 4px $primary-color;
+
+                &:nth-child(1) {
+                    text-transform: uppercase;
+                }
+
+                &:nth-child(3) {
+                    letter-spacing: .5rem;
+                }
+            }
+    
+            p {
+                font-size: 20px;
+                letter-spacing: .8rem;
+                color: $primary-color;
+            }
+        }
 
         .honeycomb {
             margin: 50px auto;
